# relays

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  circuit.cpp  circuit.h  clock.h  connection.h  expected.h  expected.inl.h  layout.cpp  layout.h  organizer.cpp  organizer.h  quartz.h  relay.cpp  relay.h  relays.cpp  simulation.cpp  simulation.h  slot_types.h  transistor.cpp  transistor.h  traverser.cpp  traverser.h  wire.h
tests/: CMakeLists.txt  check_circuit.cpp  check_expected.cpp  check_flip_flop.cpp  check_layout.cpp  check_quartz.cpp
tests/perf_tests/: CMakeLists.txt  check_perf.py
tests/perf_tests/test_cases/: perf_simulation.py  perf_test.py
tests/unit_tests/: CMakeLists.txt  check_circuit.cpp  check_pyrelays.py  check_quartz.cpp  check_transistor.cpp  check_wire.cpp
tests/unit_tests/test_cases/: test_connection.py  test_interface.py  test_relay.py
tools/: lark_parser_example.py  relays.py  vhdl_ebnf.py
wrappers/python/: CMakeLists.txt
wrappers/python/src/: pyrelays.cpp
wrappers/python/tests/test_cases/: test_clock.py
